src/pyupgrade/snapshots/ruff__pyupgrade__tests__datetime_utc_alias_py311.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: DatetimeTimezoneUTC
  location:
    row: 10
    column: 6
  end_location:
    row: 10
    column: 27
  fix:
    location:
      row: 10
      column: 6
    end_location:
      row: 10
      column: 27
    content: datetime.UTC
    message: ~
  parent: ~
- kind: DatetimeTimezoneUTC
  location:
    row: 11
    column: 6
  end_location:
    row: 11
    column: 21
  fix:
    location:
      row: 11
      column: 6
    end_location:
      row: 11
      column: 21
    content: dt.UTC
    message: ~
  parent: ~

