src/pyupgrade/snapshots/ruff__pyupgrade__tests__future_annotations_pep_604_p37.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: UsePEP604Annotation
  location:
    row: 40
    column: 3
  end_location:
    row: 40
    column: 16
  fix:
    location:
      row: 40
      column: 3
    end_location:
      row: 40
      column: 16
    content: int | None
    message: ~
  parent: ~

